--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -20,7 +20,7 @@
         <span class="label label-default">Situs State</span>
         <select class="form-control" formControlName="FCVolCISitusState">
           <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
-          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id == lookupValue" 
+          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id==volCiSitus"
           value={{lookUpDataSitusState.id}}>
             {{lookUpDataSitusState.state}}</option>
 
