--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -21,7 +21,7 @@
         <span class="label label-default">Situs State</span>
         <select class="form-control" formControlName="FCbasicSitusState">
           <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
-          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id == lookupValue" 
+          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates" [selected]="lookUpDataSitusState.id==bglStatus"
           value={{lookUpDataSitusState.id}}>
             {{lookUpDataSitusState.state}}</option>
 
