--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -19,7 +19,7 @@
       <span class="label label-default">Situs State</span>
       <select class="form-control" formControlName = "FChospSitusState">
         <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
-        <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id == lookupValue" 
+        <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id==hiStatus"
         value={{lookUpDataSitusState.id}}>
           {{lookUpDataSitusState.state}}</option>
 
