--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -20,7 +20,7 @@
         <span class="label label-default">Situs State</span>
         <select class="form-control" formControlName = "FCVolGrpLfSitusState">
           <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
-          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id == lookupValue" 
+          <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id==volGrpSitus"
           value={{lookUpDataSitusState.id}}>
             {{lookUpDataSitusState.state}}</option>
 
