--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -2,34 +2,44 @@
   <form [formGroup]="basicGrpLfformgrp">
     <div class="row mb-4" style="justify-content:space-evenly;margin-right: 7%;">
       <div class="radio-button">
-        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCbasicEffectiveDate_Action" />
-          <label class="radio-label"> {{item.name}}</label></div>
+        <div *ngFor="let item of radioButtonArr">
+          <input type="radio" value={{item.value}} formControlName="FCbasicEffectiveDate_Action" />
+          <label class="radio-label"> {{item.name}}</label>
+        </div>
       </div>
-    
+
+      <!--<div class="col-3">
+    <span class="label label-default">BGL Effective Date</span>
+    <input type="date" [(ngModel)] ="minDate" formControlName="FCbasicEffectiveDate" [min]="minDate"
+      class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
+
+  </div>-->
       <div class="col-3">
         <span class="label label-default">BGL Effective Date</span>
-        <input type="date" [(ngModel)] ="minDate" formControlName="FCbasicEffectiveDate" [min]="minDate"
-          class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
-
+        <input type="date" formControlName="FCbasicEffectiveDate"
+               class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
       </div>
-      
+
       <div class="radio-button">
-        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCbasicSitusState_Action" />
-          <label class="radio-label"> {{item.name}}</label></div>
+        <div *ngFor="let item of radioButtonArr">
+          <input type="radio" value={{item.value}} formControlName="FCbasicSitusState_Action" />
+          <label class="radio-label"> {{item.name}}</label>
+        </div>
       </div>
       <div class="col-3">
         <span class="label label-default">Situs State</span>
         <select class="form-control" formControlName="FCbasicSitusState">
           <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates" [selected]="lookUpDataSitusState.id==bglStatus"
-          value={{lookUpDataSitusState.id}}>
-            {{lookUpDataSitusState.state}}</option>
+                  value={{lookUpDataSitusState.id}}>
+            {{lookUpDataSitusState.state}}
+          </option>
 
         </select>
 
       </div>
       <div class="mt-4">
-        <button class="btn btn-primary" [disabled]=resetFlag type="submit" (click)= "resetfpp()">Reset Form </button>
+        <button class="btn btn-primary" [disabled]=resetFlag type="submit" (click)="resetfpp()">Reset Form </button>
       </div>
     </div>
 
