--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -7,9 +7,9 @@
     <router-outlet></router-outlet>
   </div>
 
-    <!--<div >
+    <div >
       <app-spinner [isRunning]="isLoading"></app-spinner>
-    </div>-->
+    </div>
   
 
   <app-footer></app-footer>
