--- a/ClientApp/src/app/group-search/group-search.component.html
+++ b/ClientApp/src/app/group-search/group-search.component.html
@@ -7,9 +7,7 @@
             <label for="selectGrp">Select by Group Name/Number</label>
             <select class="select-dropdown form-control" id="selectGrp"
             name="selectGrp">
-                <option selected>Select</option>
-                <option value="By Group Name">By Group Name</option>
-                <option value="By Group Number">By Group Number</option>
+                <option selected value="By Group Number">By Group Number</option>
             </select>
         </div>
         <div class="col-md-4 form-group">
