--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -27,6 +27,7 @@
   <!-- Group Section -->
 
   <form>
+    <fieldset [disabled]="fieldsetDisabled">
       <div class="row">
         <div class="form-group col-md-3">
           <span class="label label-default">Group Number<span aria-hidden="true" class="required">*</span></span>
@@ -129,6 +130,7 @@
           </select>
         </div>
       </div>
+    </fieldset>
   </form> 
 
   <div>
