--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -6,7 +6,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Accident Effective Date</span>   
+        <span class="label label-default">Product Effective Date</span>   
         <input type="date" formControlName="FCaccEffectiveDate" class="form-control mb-2 " style="width: 100%;"
           placeholder="Group Effective Date">  
   
@@ -48,7 +48,7 @@
       <div class="col-4 mb-2">
   
         <span class="label">
-          Accident Rate Level
+           Rate Level
         </span>
         <select class="form-control" formControlName="FCaccRateLevel">
            <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
