--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -15,7 +15,7 @@
 
   </div>-->
       <div class="col-3">
-        <span class="label label-default">BGL Effective Date</span>
+        <span class="label label-default">Product Effective Date</span>
         <input type="date" formControlName="FCbasicEffectiveDate"
                class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
       </div>
