--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -8,7 +8,7 @@
             <label class="radio-label"> {{item.name}}</label></div>
         </div>
         <div class="col-3">
-          <span class="label label-default">FPPI Effective Date</span>
+          <span class="label label-default">Product Effective Date</span>
           <input type="date" formControlName = "FCfppiEffectiveDate" class="form-control mb-2 " style="width: 100%;"
             placeholder="Group Effective Date">
 
