--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -9,8 +9,8 @@
       </div>
 
       <div class="col-3">
-        <span class="label label-default">FPPG Effective Date</span> 
-        <input type="date" formControlName="FCfppgEffectiveDate" class="form-control mb-2 " style="width: 100%;"
+        <span class="label label-default">Product Effective Date</span> 
+        <input type="date" formControlName="FCfppgEffectiveDate" class="form-control mb-2" style="width: 100%;"
           placeholder="Group Effective Date">
       </div>
       <div class="radio-button">
