--- a/ClientApp/src/app/group-search/group-search.component.html
+++ b/ClientApp/src/app/group-search/group-search.component.html
@@ -8,6 +8,7 @@
             <select class="select-dropdown form-control" id="selectGrp"
             name="selectGrp">
                 <option selected value="By Group Number">By Group Number</option>
+                <option value="By Group Name">By Group Name</option>
             </select>
         </div>
         <div class="col-md-4 form-group">
