--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -7,7 +7,7 @@
         <label class="radio-label"> {{item.name}}</label></div>
     </div>
     <div class="col-3">
-      <span class="label label-default">EMP Paid CI Effective Date</span>
+      <span class="label label-default">Product Effective Date</span>
       <input type="date" class="form-control mb-2 " style="width: 100%;"
       formControlName="FCempCIEffectiveDate" placeholder="Group Effective Date">
 
