--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -1,8 +1,4 @@
-<!-- <div class="d-flex justify-content-center" *ngIf="!isLoading">
-  <div class="spinner-border" style="width: 8rem; height: 8rem; color: #ff6363; margin-top: 15%;">
-    <span class="sr-only">Loading...</span>
-  </div>
-</div> -->
+
 
 <div class="container" *ngIf="isLoading && groupsData !== undefined">
   <div class="row">
@@ -27,6 +23,7 @@
   <!-- Group Section -->
 
   <form  #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <fieldset [disabled]="fieldsetDisabled">
       <div class="row">
         <div class="form-group col-md-3">
           <span class="label label-default">Group Number<span aria-hidden="true" class="required">*</span></span>
@@ -129,7 +126,7 @@
           </select>
         </div>
       </div>
-  
+  </fieldset>
 
   <div>
 
@@ -237,14 +234,14 @@
   <div class="container">
     <div id="accordion" class="accordion">
       <div class="card mt-2" style="cursor: pointer;">
-        <div class="card-header collapsed mb-2"  data-toggle="collapse" href="#collapseOne">
-          <a class="card-title">
+        <button type="button" style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductFppg==='Inactive'"  class="card-header collapsed mb-2"  data-toggle="collapse" href="#collapseOne">
+         
             FPPG
-          </a>
+       
           <mat-slide-toggle style="float: right;" name="check" [(ngModel)]="isCheckedFppg" (change)="toggleChangeProductFppg($event)"
             [color]="toggleActiveColor" [disabled]="toggleFlag">
             {{checkedToggleProductFppg}}</mat-slide-toggle>
-        </div>
+        </button>
         <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
 
           <app-fppg [lookupValue]="selectedState" #child0 [dateValue]="dateChange">
@@ -344,7 +341,7 @@
 
           </app-fppg>
         </div>
-        <button type="button"  style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductFppi==='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+        <button type="button" style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductFppi==='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
             FPP Individual
         
           <mat-slide-toggle name="check2" style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedFppInd"
@@ -451,14 +448,14 @@
             </form>
           </app-fpp-individual>
         </div>
-        <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-          <a class="card-title">
+        <button type="button" style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductACCident==='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+        
             Accident
-          </a>
+       
           <mat-slide-toggle name="check3" style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedAccident"
             (change)="toggleChangeProductAccident($event)" [color]="toggleActiveColor"  [disabled]=toggleFlag>
             {{checkedToggleProductACCident}}</mat-slide-toggle>
-        </div>
+        </button>
         <div id="collapseThree" class="collapse" data-parent="#accordion">
           <div class="card-body">
 
@@ -564,14 +561,14 @@
             </app-accident>
           </div>
         </div>
-        <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-          <a class="card-title">
+        <button type="button" style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductHospitalIndemnity=='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+       
             Hospital Indemnity
-          </a>
+        
           <mat-slide-toggle name="check4" style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedHospital"
             (change)="toggleChangeProductHospitalIndemnity($event)" [color]="toggleActiveColor"  [disabled]=toggleFlag>
             {{checkedToggleProductHospitalIndemnity}}</mat-slide-toggle>
-        </div>
+        </button>
         <div id="collapseFour" class="collapse" data-parent="#accordion">
           <div class="card-body">
             <app-hospital-indemnity [lookupValue]="selectedState" #child3 [dateValue]="dateChange">
@@ -675,14 +672,14 @@
             </app-hospital-indemnity>
           </div>
         </div>
-        <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
-          <a class="card-title">
+        <button type="button"style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductEmpPaidCI==='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+         
             Employer Paid CI
-          </a>
+        
           <mat-slide-toggle name="check5" style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedEmpPaidCi"
             (change)="toggleChangeProductEmpPaidCi($event)" [color]="toggleActiveColor"  [disabled]=toggleFlag>
             {{checkedToggleProductEmpPaidCI}}</mat-slide-toggle>
-        </div>
+        </button>
         <div id="collapseFive" class="collapse" data-parent="#accordion">
           <div class="card-body">
             <app-employer-paid-ci [lookupValue]="selectedState" #child4 [dateValue]="dateChange">
@@ -790,14 +787,14 @@
             </app-employer-paid-ci>
           </div>
         </div>
-        <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
-          <a class="card-title">
+        <button type="button" style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductVolCI==='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+         
             Voluntary CI
-          </a>
+        
           <mat-slide-toggle name="check6" style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedVolutaryCi"
             (change)="toggleChangeProductVolCI($event)" [color]="toggleActiveColor"  [disabled]=toggleFlag>
             {{checkedToggleProductVolCI}}</mat-slide-toggle>
-        </div>
+        </button>
         <div id="collapseSix" class="collapse" data-parent="#accordion">
           <div class="card-body">
             <app-voluntary-ci [lookupValue]="selectedState" #child5 [dateValue]="dateChange">
@@ -904,14 +901,14 @@
             </app-voluntary-ci>
           </div>
         </div>
-        <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
-          <a class="card-title">
+        <button type="button" style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductVolGrpCI==='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+         
             Vol Group Life
-          </a>
+         
           <mat-slide-toggle name="check7" style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedVolGrpLife"
             (change)="toggleChangeProductVilGrpLife($event)" [color]="toggleActiveColor"  [disabled]=toggleFlag>
             {{checkedToggleProductVolGrpCI}}</mat-slide-toggle>
-        </div>
+        </button>
         <div id="collapseSeven" class="collapse" data-parent="#accordion">
           <div class="card-body">
             <app-vol-group-life [lookupValue]="selectedState" #child6 [dateValue]="dateChange">
@@ -1019,14 +1016,14 @@
             </app-vol-group-life>
           </div>
         </div>
-        <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
-          <a class="card-title">
+        <button type="button" style="border-width: 0px; text-align: left;" [disabled]="checkedToggleProductBcsGrpLife==='Inactive'" class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
+         
             Basic Group Life
-          </a>
+       
           <mat-slide-toggle name="check8" style="float: right;" (click)="$event.stopPropagation()" [(ngModel)]="isCheckedBasicGrpLife"
             (change)="toggleChangeProductBasicGrpLife($event)" [color]="toggleActiveColor"  [disabled]=toggleFlag>
             {{checkedToggleProductBcsGrpLife}}</mat-slide-toggle>
-        </div>
+        </button>
         <div id="collapseEight" class="collapse" data-parent="#accordion">
           <div class="card-body">
             <app-basic-group-life [lookupValue]="selectedState" #child7 [dateValue]="dateChange">
