--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -6,7 +6,7 @@
         <label class="radio-label"> {{item.name}}</label></div>
     </div>
     <div class="col-3">
-      <span class="label label-default">HI Effective Date</span>
+      <span class="label label-default">Product Effective Date</span>
       <input type="date" class="form-control mb-2 " style="width: 100%;"
         placeholder="Group Effective Date" formControlName="FChospEffectiveDate">
 
@@ -37,7 +37,7 @@
         <label class="radio-label"> {{item.name}}</label></div>
     </div>
     <div class="col-4 mb-2">
-      <span class="label"> Hospital Rate Level</span>
+      <span class="label">  Rate Level</span>
       <select class="form-control" formControlName="FChospRateLevel">
         <option *ngFor="let names of Rate" value={{names.no}}>
           {{ names.abb }} 
