--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -7,7 +7,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">VOL CI Effective Date</span>
+        <span class="label label-default">Product Effective Date</span>
         <input type="date" formControlName="FCVolCIEffectiveDate"
           class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
 
