routing and ui alingment

--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col-3">
 
-          <span class="label label-default">Employee GI Amount Max($)</span>
+          <span class="label label-default">Emp GI Amount Max($)</span>
 
           <input type="text" class="form-control mb-2" formControlName="FCfppiEmpGIAmtMax" style="width: 100%;" placeholder="Employee GI Amount Max"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -43,13 +43,13 @@
 
 
         <div class="col-3">
-          <span class="label label-default">Employee QI Amount Max($)</span>
+          <span class="label label-default">Emp QI Amount Max($)</span>
 
           <input type="text" class="form-control mb-2" formControlName="FCfppiEmpQIAmtMax" style="width: 100%;" placeholder="Employee QI Amount Max"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
         </div>
         <div class="col-3">
-          <span class="label label-default">Employee Max Amount($)</span>
+          <span class="label label-default">Emp Max Amount($)</span>
           <input type="text" class="form-control mb-2" formControlName="FCfppiEmpAmtMax" style="width: 100%;" placeholder="Employee Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
         </div>
