--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -41,7 +41,7 @@
       </div>
       <div class="col-3">
 
-        <span class="label label-default">Employee GI Amount Max($)</span>
+        <span class="label label-default">Emp GI Amount Max($)</span>
 
         <input type="text" formControlName="FCfppgEmpGIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Employee GI Amount Max" required
@@ -51,14 +51,14 @@
 
 
       <div class="col-3">
-        <span class="label label-default">Employee QI Amount Max($)</span>
+        <span class="label label-default">Emp QI Amount Max($)</span>
 
         <input type="text" formControlName="FCfppgEmpQIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Employee QI Amount Max" required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Employee SI Max Amount($)</span>
+        <span class="label label-default">Emp SI Max Amount($)</span>
         <input type="text" class="form-control mb-2" formControlName="FCfppgEmpAmtMax" style="width: 100%;"
           placeholder="Employee Max Amount" required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
