--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -10,7 +10,7 @@
 
       <div class="col-3">
         <span class="label label-default">Product Effective Date</span> 
-        <input type="date" formControlName="FCfppgEffectiveDate" class="form-control mb-2" style="width: 100%;"
+        <input type="date" formControlName="FCfppgEffectiveDate" [value] = "latest_date" class="form-control mb-2" style="width: 100%;"
           placeholder="Group Effective Date">
       </div>
       <div class="radio-button">
