--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-3">
       <span class="label label-default">Product Effective Date</span>
-      <input type="date" class="form-control mb-2 " style="width: 100%;"
+      <input type="date" [value]="latest_datehospitalindemnity" class="form-control mb-2 " style="width: 100%;"
         placeholder="Group Effective Date" formControlName="FChospEffectiveDate">
 
     </div>
