--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col-3">
         <span class="label label-default">Product Effective Date</span>
-        <input type="date" formControlName="FCVolCIEffectiveDate"
+        <input type="date" [value]="latest_datevolci" formControlName="FCVolCIEffectiveDate"
           class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
 
       </div>
