--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-3">
         <span class="label label-default">Product Effective Date</span>   
-        <input type="date" formControlName="FCaccEffectiveDate" class="form-control mb-2 " style="width: 100%;"
+        <input type="date" [value] = "latest_dateaccident" formControlName="FCaccEffectiveDate" class="form-control mb-2 " style="width: 100%;"
           placeholder="Group Effective Date">  
   
       </div>
