--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -16,7 +16,7 @@
   </div>-->
       <div class="col-3">
         <span class="label label-default">Product Effective Date</span>
-        <input type="date" formControlName="FCbasicEffectiveDate"
+        <input type="date" [value]="latest_datebasicgrplife" formControlName="FCbasicEffectiveDate"
                class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
       </div>
 
