--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-3">
       <span class="label label-default">Product Effective Date</span>
-      <input type="date" class="form-control mb-2 " style="width: 100%;"
+      <input type="date" [value]="latest_dateemppaisci" class="form-control mb-2 " style="width: 100%;"
       formControlName="FCempCIEffectiveDate" placeholder="Group Effective Date">
 
     </div>
