--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -83,7 +83,7 @@
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Spouse Max Amount($)</span>
+        <span class="label label-default">Spouse SI Max Amount($)</span>
         <input type="text" class="form-control mb-2 " formControlName="FCVolCISpouseAmtMax" style="width: 100%;"
           placeholder="Spouse Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -179,11 +179,11 @@
       </div>
       <div class="col-4">
         <div class="row" style="justify-content:space-evenly;">
-          <div class="col" style="margin-left: -16px;">
+          <div class="col" style="margin-left: -160px;">
           </div>
-          <div class="col" style="justify-content:flex-start;margin-right: 170px;margin-top: 24px;">
-            <mat-checkbox class="margin" formControlName="FCVolCIEmpNTB" [(ngModel)]="checked" name="EmployeeNTB">
-              Employee NTB</mat-checkbox>
+          <div class="col" style="justify-content:flex-start;margin-right: 46px;margin-top: 24px;">
+            <input type="radio" class="margin" formControlName="FCVolCIEmpNTB" [(ngModel)]="checked">
+              Employee NTB
           </div>
         </div>
       </div>
@@ -196,8 +196,8 @@
           <div class="col" style="margin-left: -147px;">
           </div>
           <div class="col" style="margin-top: 24px;">
-            <mat-checkbox class="margin" formControlName="FCVolCIEmpTB" [(ngModel)]="indeterminate" name="EmployeeTB">
-              Employee TB</mat-checkbox>
+            <input type="radio" class="margin" formControlName="FCVolCIEmpTB" [(ngModel)]="indeterminate" >
+              Employee TB
           </div>
         </div>
       </div>
@@ -209,11 +209,11 @@
       </div>
       <div class="col-4">
         <div class="row" style="justify-content:space-evenly;">
-          <div class="col" style="margin-left: -16px;">
+          <div class="col" style="margin-left: -98px;">
           </div>
-          <div class="col" style="justify-content:flex-start;margin-right: 170px;margin-top: 24px;">
-            <mat-checkbox class="margin" formControlName="FCVolCISpouseNTB" [(ngModel)]="checked1"
-              name="SpouseNTB">Spouse NTB</mat-checkbox>
+          <div class="col" style="justify-content:flex-start;margin-right: 107px;margin-top: 24px;">
+            <input type="radio" class="margin" formControlName="FCVolCISpouseNTB" [(ngModel)]="checked1"
+            >Spouse NTB
           </div>
         </div>
       </div>
@@ -227,8 +227,8 @@
           <div class="col" style="margin-left: -147px;">
           </div>
           <div class="col" style="margin-top: 24px;">
-            <mat-checkbox class="margin" formControlName="FCVolCISpouseTB" [(ngModel)]="indeterminate1" name="SpouseNTB">
-              Spouse TB</mat-checkbox>
+            <input type="radio" class="margin" formControlName="FCVolCISpouseTB" [(ngModel)]="indeterminate1">
+              Spouse TB
           </div>
         </div>
       </div>
