--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -49,7 +49,7 @@
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
         </div>
         <div class="col-4">
-          <span class="label label-default">Emp Max Amount($)</span>
+          <span class="label label-default">Emp SI Max Amount($)</span>
           <input type="text" class="form-control mb-2" formControlName="FCfppiEmpAmtMax" style="width: 100%;" placeholder="Employee Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
         </div>
