--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -57,7 +57,7 @@
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Emp Max Amount($)</span>
+        <span class="label label-default">Emp SI Max Amount($)</span>
         <input type="text" class="form-control mb-2 " formControlName="FCVolCIEmpAmtMax" style="width: 100%;"
           placeholder="Employee Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
